// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 bxIeyO"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-2 gZkhda"
  >
    <p
      class="header__Link-djltcn-4 cBCiCG"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-2 gZkhda"
>
  <p
    class="header__Link-djltcn-4 cBCiCG"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 lbKySP"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-2 gZkhda"
  >
    <div
      class="header__Group-djltcn-1 cIqXkZ"
    >
      <p
        class="header__Link-djltcn-4 cBCiCG"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-4 cBCiCG"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-1 cIqXkZ"
    >
      <div
        class="header__Search-djltcn-6 dgzXLg"
      >
        <button
          class="header__SearchIcon-djltcn-7 jUqGAn"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-8 fksgJI"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-9 iQmgmP"
      >
        <button
          class="header__Picture-djltcn-3 gbhTFQ"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-5 ebvPNZ"
        >
          <div
            class="header__Group-djltcn-1 cIqXkZ"
          >
            <button
              class="header__Picture-djltcn-3 gbhTFQ"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-4 cBCiCG"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-djltcn-1 cIqXkZ"
          >
            <p
              class="header__Link-djltcn-4 cBCiCG"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-2 header__Feature-djltcn-12 gZkhda gzTbhl"
  >
    <h2
      class="header__FeatureCallOut-djltcn-14 iHIFAV"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-13 crCkGT"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-15 epHWqA"
    >
      Play
    </button>
  </div>
</div>
`;
